# bifrost

./: .dockerignore  AGENTS.md  Dockerfile  README.md  manage.py  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
bifrost/: __init__.py  asgi.py  celery.py  settings.py  tests.py  urls.py  wsgi.py
bifrost/settings/: __init__.py  base.py  production.py
docs/: ccmdd-client.md  lock.md  tasks.md  turn-client.md
lock/: admin.py  apps.py  models.py  tests.py
lock/migrations/: 0001_initial.py
synch/: admin.py  apps.py  ccmdd.py  models.py  tasks.py  tests.py  turn.py  views.py
synch/migrations/: 0001_initial.py  0002_prescription.py  0003_facility.py  0004_alter_facility_options_patient_invite_sent.py  0005_invite_sent_existing_patients.py
synch/tests/: test_admin.py  test_api_client.py  test_models.py  test_tasks.py  test_turn_client.py  test_views.py
