[project]
name = "bifrost"
version = "0.1.0"
description = "Synchronises patient data between us and SyNCH"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.6.3",
    "django>=5.2.13",
    "django-environ>=0.13.0",
    "psycopg[binary]>=3.3.3",
    "requests>=2.33.1",
    "sentry-sdk>=2.58.0",
]

[dependency-groups]
dev = [
    "celery-types>=0.26.0",
    "django-stubs[compatible-mypy]>=6.0.2",
    "mypy>=1.20.1",
    "ruff>=0.15.10",
    "types-requests>=2.33.0.20260408",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "ERA", # commented out code
    "A", # flake8-builtins
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes errors
    "I",  # isort errors
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM", # flake8-simplify
    "DJ", # flake8-django
    "RUF", # ruff errors
    "Q",  # flake8-quotes errors
    "R",  # flake8-bugbear errors
    "S",  # flake8-bandit
    "T20", # flake8-print
    "PTH", # flake8-use-pathlib
]

[[tool.mypy.overrides]]
module = ["environ.*"]
ignore_missing_imports = true
